# wagtail-font-awesome-svg

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  scrape.py  setup.py
